2009-10-27	Removed cutting filenames to terminal width.

2009-10-25	Fixed "bad file descriptor".
			Fixed Makefile: clean binary AND object files.

2009-10-24	Cleaned up the type-mess, fixed large files; new used types
			are:
				- speed & number of files:      unsigned long
				- file size & total list size:  unsigned long long

			Maximum file/list size therefore is now ~16.8TiB.

			Fixed cutting to terminal width.

2009-10-20	Fixed ignoring of -D, removed usage info on failed cmdline
			parsing.

2009-10-06	Switched to rsync-like progress output style.

2009-09-29	Added CHANGELOG to provide more detailed information than
			the git-commit-summaries.
			
			Switched data structure for file lists from double linked
			lists to array-based ones.
			This was done because of the much simpler code compared to
			all that pointer stuff in the version with linked lists. I
			think this change does not mean any disadvantage in memory
			consumption because only the pointers to the items need to
			be stored and therefore the array itself should not get a
			significant size.
			  
2009-09-25	Added dynamic limits information, some cleanup.

2009-09-25	Some fixes, added bugs to TODO.

2009-09-24	Usage information, updated TODOs, added proper license
			information, added git-ignores to keep binaries out.

2009-09-23	Initial commit.