@@ -1,4 +1,10 @@
+2009-10-28	Fixed directory deletion with -d.
+			Added -u policy for existing files: keep existing files if
+			they match in size, owner and times; overwrite changed ones.
+			Added compile timestamp to usage information.
+
 2009-10-27	Removed cutting filenames to terminal width.
+			Added attribute-cloning for directories, too.
 
 2009-10-25	Fixed "bad file descriptor".
 			Fixed Makefile: clean binary AND object files.
